--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,25 +1,23 @@
-name: Build on PR
-
+name: Linting and Formatting on PR
 on:
   pull_request:
-    branches:
-      - master
-
+    branches: -"master"
 jobs:
-  build:
+  Continuous-Intergration:
+    name: Performing linting, Formatting on the application
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - name: Use Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: '20'
-      
+      - name: Checkout the Repository
+        uses: actions/checkout@v3
+
+      - name: Setup pnpm
+        run: npm install -g pnpm
+
       - name: Install Dependencies
-        run: npm install
-      
-      - name: Generate prisma client
-        run: npm run db:generate
-        
-      - name: Run Build
-        run: npm run build
+        run: pnpm install
+
+      - name: Run linting check
+        run: pnpm run lint:check
+
+      - name: Check formatting
+        run: pnpm run format:check
